--- a/codecheck.yml
+++ b/codecheck.yml
@@ -41,4 +41,4 @@ summary: >
 repository: https://github.com/codecheckers/zonebuilder
 check_time: "2025-09-04 12:00:00"  
 certificate: 2025-027
-report: https://zenodo.org/record/17059066
+report: https://doi.org/10.5281/zenodo.17059066
